Use mixin component styling

--- a/_sass/color_light.scss
+++ b/_sass/color_light.scss
@@ -77,7 +77,7 @@ $color_news_text:               $color_text;
 $color_news_bit_date:         lighten($color_text, 30%);
 
 // Sidebar
-$color_sidebar_label:           $color_text;
+$color_sidebar_label:           $color_primary;
 $color_sidebar_text:            $color_text;
 $color_sidebar_bg:              $color_main_bg;
 
