--- a/_includes/post_recent.html
+++ b/_includes/post_recent.html
@@ -1,12 +1,15 @@
-<div id="recent_posts">
+<div id="recent_posts_block">
     <h1>Recent Posts</h1>
-    <ul>
+    <div class="recent_posts">
         {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
         {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
         {% for post in site.categories['post'] limit:5 %}
             {% if post.title != page.title %}
-                <li>
-                    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                <div class="recent_post">
+                    <div class="recent_post_heading">
+                        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                    </div>
+                
                     {% if post.date == nil %}
                         <p class="date">Undated</p>
                     {% else %}
@@ -21,8 +24,8 @@
                         </p>
                     {% endif %}
                     <p class="excerpt">{{ post.excerpt }}</p>
-                </li>
+                </div>
             {% endif %}
         {% endfor %}
-    </ul>
+    </div>
 </div>
