--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -1,58 +1,48 @@
-<div id="related_posts">
-    <h1>Related Posts</h1>
-    <ul>
-    {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
-    {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
-    <!-- The following code snippet was taken from http://zhangwenli.com -->
-    <!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
-    {% assign hasSimilar = '' %}
-    {% for post in site.categories['post'] limit:5 %}
-        {% assign postHasSimilar = false %}
-        {% for tag in post.tags %}
-            {% for thisTag in page.tags %}
-                {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
-                    <li>
-                        <!--
-                        {% if post.date == nil %}
-                        <a href="{{ post.url }}">
-                            {{ post.title }}
-                            {% if post.series %}
-                                (Series: {{ post.series }})
+<div id="related_posts_block">
+    <div class="related_posts">
+        <h1>Related Posts</h1>
+        {% capture nowday  %}{{ 'now' | date: '%Y-%m-%d' }}{% endcapture %}
+        {% capture nowyear %}{{ 'now' | date: '%Y' }}{% endcapture %}
+        <!-- The following code snippet was taken from http://zhangwenli.com -->
+        <!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
+        {% assign hasSimilar = '' %}
+        {% for post in site.categories['post'] limit:5 %}
+            {% assign postHasSimilar = false %}
+            {% for tag in post.tags %}
+                {% for thisTag in page.tags %}
+                    {% if postHasSimilar == false and hasSimilar.size < 6 and post != page and tag == thisTag %}
+                        <div class="related_post">
+                            <div class="related_post_heading">
+                                <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+                            </div>
+                            {% if post.date == nil %}
+                                <p class="date">Undated</p>
+                            {% else %}
+                                <p class="date">
+                                    {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
+                                    {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
+                                    {% if postdate == nowday %}
+                                        {{ post.date | date: site.data.format.same_day }}
+                                    {% elsif postyear == nowyear %}
+                                        {{ post.date | date: site.data.format.same_year }}
+                                    {% endif %}
+                                </p>
                             {% endif %}
-                        </a>
-                        {% else %}
-                        <a href="{{ post.url }}">
-                            {{ post.title }} &ndash; {{ post.date | date_to_string }}
-                            {% if post.series %}
-                                (Series: {{ post.series }})
-                            {% endif %}
-                        </a>
-                        {% endif %}
-                        -->
-                       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-                        {% if post.date == nil %}
-                            <p class="date">Undated</p>
-                        {% else %}
-                            <p class="date">
-                                {% capture postdate %}{{ post.date | date: '%Y-%m-%d' }}{% endcapture %}
-                                {% capture postyear %}{{ post.date | date: '%Y' }}{% endcapture %}
-                                {% if postdate == nowday %}
-                                    {{ post.date | date: site.data.format.same_day }}
-                                {% elsif postyear == nowyear %}
-                                    {{ post.date | date: site.data.format.same_year }}
-                                {% endif %}
-                            </p>
-                        {% endif %}
-                        <p class="excerpt">{{ post.excerpt }}</p>
-                    </li>
-                    {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
-                    {% assign postHasSimilar = true %}
-                {% endif %}
+                            <p class="excerpt">{{ post.excerpt }}</p>
+                        </div>
+                        {% capture hasSimilar %}{{ hasSimilar }}*{% endcapture %}
+                        {% assign postHasSimilar = true %}
+                    {% endif %}
+                {% endfor %}
             {% endfor %}
         {% endfor %}
-    {% endfor %}
-    {% if hasSimilar.size == 0 %}
-        <li><h2>No related posts</h2></li>
-    {% endif %}
-    </ul>
+        {% if hasSimilar.size == 0 %}
+            <div class="related_post">
+                <div class="related_post_heading">
+                    <h2>No related posts</h2>
+                </div>
+            </div>
+        {% endif %}
+    </div>
 </div>
+    
