--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -223,6 +223,9 @@ div.footnotes {
 
 header {
 
+    @include min-screen(721px) {
+        position: fixed;
+    }
     width: 100%;
     height: 85px;
     padding-top: 5px;
@@ -231,11 +234,12 @@ header {
     @media screen {
         background: $color_header_bg;
     }
-    border-bottom: 5px solid $color_primary;
 
-    @include min-screen(721px) {
-        position: fixed;
+    border-bottom: 5px solid $color_primary;
+    @media print {
+        border-bottom: none;
     }
+
     @include max-screen(720px) {
         border-bottom: none;
     }
@@ -291,7 +295,7 @@ header {
             p {
                 float: left;
                 font-family: $font_title_tagline;
-                font-weight: bold;
+                font-weight: normal;
                 @media print {
                     font-weight: normal;
                 }
@@ -390,10 +394,15 @@ main {
     float: left;
     background: $color_main_bg;
     
+    @media print {
+        padding-top: 0px;
+    }
+    
     @include min-screen(721px) {
         float: clear;
         padding-top: 110px;
     }
+    
     @include max-screen(720px) {
         padding-top: 0px;
     }
@@ -453,7 +462,7 @@ section {
 
 section.column_left_sidebar {
     @media print {
-        margin-left: 0;
+        margin: 0px;
     }
     h1 {
         @include sidebar_component_label;
@@ -550,7 +559,7 @@ section.column_left_sidebar {
 
     @include sidebar_component;
     @media print {
-        padding: 10px 50px 12px 50px;
+        display: none;
     }
     
     div.random_quotes {
@@ -615,7 +624,9 @@ section.column_left_sidebar {
 }
 
 #announcements_block {
-    
+    @media print {
+        display: none;
+    }
     @include sidebar_component;
     @include max-screen(720px) {
         margin-top: 20px;
@@ -663,7 +674,7 @@ section.column_left_sidebar {
 
 #newsbits_roll {
     @media print {
-        padding-left: 0;
+        display: none;
     }
     @include sidebar_component_scroll;
     margin-top: 25px;
@@ -841,6 +852,9 @@ section.hub_column_main {
 /* ------------------------------------------------------------------------- */
 
 section.post_column_main {
+    @media print {
+        margin: 0px;
+    }
     // Applied to p, pre, ul, ol
     @mixin bottom_margin {
         margin: 0 0 12px 0;
@@ -1286,7 +1300,10 @@ section.post_column_main {
 /* ------------------------------------------------------------------------- */
 
 section.column_right_sidebar {
-
+    @media print {
+        margin: 0px;
+    }
+    
     h1 {
         @include sidebar_component_label;
     }
@@ -1326,10 +1343,6 @@ section.column_right_sidebar {
         a.current {
             color: $color_primary;
         }
-    }
-
-    div {
-        //margin-bottom: 12px;
     }
 
     #rssfeeds_roll {
@@ -1392,7 +1405,11 @@ section.column_right_sidebar {
     #related_posts_block,
     #recent_posts_block {
     
-        @include sidebar_component_boxed;
+        @include sidebar_component;
+        @media print {
+            margin: 0px;
+            padding: 0px;
+        }
         
         div.related_posts,
         div.recent_posts {
@@ -1416,6 +1433,8 @@ section.column_right_sidebar {
                             font-size: $font_size_related_post_title;
                             font-weight: bold;
                             line-height: $font_size_related_post_title + 2;
+                            border-bottom: none;
+                            display: block;
                         }
                         @include component_entry_heading;
                     }
@@ -1438,11 +1457,6 @@ section.column_right_sidebar {
                 }
             }
         }
-    }
-    
-    #recent_posts {
-        // Add vertical space after the related posts block
-        margin-top: 20px;
     }
     
     #twitter_feed {
