--- a/_sass/mixin.scss
+++ b/_sass/mixin.scss
@@ -28,6 +28,22 @@
         h5 code { font-size: $font_size_page_title - 8; }
         h6 code { font-size: $font_size_page_title - 9; }
     }
+    
+    @media print {
+        h1 { font-size: $font_size_page_title - 4; line-height: $font_line_height_page_title;     }
+        h2 { font-size: $font_size_page_title - 5; line-height: $font_line_height_page_title - 2; }
+        h3 { font-size: $font_size_page_title - 6; line-height: $font_line_height_page_title - 2; }
+        h4 { font-size: $font_size_page_title - 7; line-height: $font_line_height_page_title - 2; }
+        h5 { font-size: $font_size_page_title - 8; line-height: $font_line_height_page_title - 2; }
+        h6 { font-size: $font_size_page_title - 9; line-height: $font_line_height_page_title - 2; }
+        
+        h1 code { font-size: $font_size_page_title - 4; }
+        h2 code { font-size: $font_size_page_title - 5; }
+        h3 code { font-size: $font_size_page_title - 6; }
+        h4 code { font-size: $font_size_page_title - 7; }
+        h5 code { font-size: $font_size_page_title - 8; }
+        h6 code { font-size: $font_size_page_title - 9; }
+    }
 
     h1, h2, h3, h4, h5, h6 {
         font-family: $font_page_title;
@@ -93,8 +109,8 @@
 }
 
 @mixin sidebar_component {
-    margin-bottom: 15px;
-    padding-top: 10px;
+    margin: 0px 0px 15px 0px;
+    padding: 10px 0px 0px 0px;
 }
 
 @mixin sidebar_component_boxed {
