Correction on info page layout

--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include post_left_sidebar.html %}
+{% include hub_left_sidebar.html %}
 
 <section class="post_column_main">
 
@@ -38,8 +38,6 @@ layout: default
     {% endif %}
     
     {{ content }}
-
-    {% include post_bottom.html %}
 
 </section>
 
