--- a/_includes/announcements.html
+++ b/_includes/announcements.html
@@ -29,36 +29,37 @@
     {% if found == false %}
         <!-- Random announcement -->
         <script type="text/javascript">
-            var announce_title = [{% for announce in site.data.announcement %}"{{ announce.title }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
-            var announce_text =  [{% for announce in site.data.announcement %}"{{ announce.text }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
-            
-            var total = announce_title.length;
+            var total = {{ site.data.announcement.size }};
             var count = 1;
-            
-            if (total == 1) {
+
+            if (total == 0) {
+                
+            } else if (total == 1) {
+                document.write("<div class='announcement'>");
                 document.write("<div class='announcement_heading'>");
-                document.write("<h1>" + announce_title[0] + "</h1>");
-                document.write("<p>" + announce_text[0] + "</p>");
+                document.write("<h2>{{ site.data.announcement[0].title }}</h2>");
+                document.write("<p>{{ site.data.announcement[0].text }}</p>");
+                document.write("</div>");
                 document.write("</div>");
             } else {
+                var announce_title = [{% for announce in site.data.announcement %}"{{ announce.title }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
+                var announce_text =  [{% for announce in site.data.announcement %}"{{ announce.text }}"{% unless forloop.last %},{% endunless %}{% endfor %}];
                 // Keep used random number here so we could check which
                 // numbers where already used and not use them again.
                 var randomUsed = [];
                 var counter = 0;
-
-                if (total > 0) {
-                    while (counter < count) {
-                        var randomIndex = Math.floor(Math.random() * total);
-                        if (randomUsed.indexOf(randomIndex) == "-1") {
-                        
-                            document.write("<div class='announcement_heading'>");
-                            document.write("<h2>" + announce_title[randomIndex] + "</h2>");
-                            document.write("<p>" + announce_text[randomIndex] + "</p>");
-                            document.write("</div>");
-                            // Store the new random number
-                            randomUsed.push(randomIndex);
-                            counter++;
-                        }
+                while (counter < count) {
+                    var randomIndex = Math.floor(Math.random() * total);
+                    if (randomUsed.indexOf(randomIndex) == "-1") {
+                        document.write("<div class='announcement'>");
+                        document.write("<div class='announcement_heading'>");
+                        document.write("<h2>" + announce_title[randomIndex] + "</h2>");
+                        document.write("<p>"  + announce_text[randomIndex] + "</p>");
+                        document.write("</div>");
+                        document.write("</div>");
+                        // Store the new random number
+                        randomUsed.push(randomIndex);
+                        counter++;
                     }
                 }
             }
