--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -69,6 +69,14 @@ $font_size_announcement_date:   13px;
 $font_announcement_text:        $font_serif_thin;
 $font_size_announcement_text:   13px;
 
+// Info
+$font_info_title:               $font_label;
+$font_size_info_title:          11px;
+$font_info_date:                $font_serif_thin;
+$font_size_info_date:           13px;
+$font_info_text:                $font_serif_thin;
+$font_size_info_text:           13px;
+
 // Page and Post
 $font_page_title:               $font_heading;
 $font_size_page_title:          $font_size_heading;
@@ -77,7 +85,7 @@ $font_page_text:                $font_default;
 $font_size_page_text:           $font_size_default + 3;
 $font_line_height_page_text:    $font_line_height_default + 8;
 $font_page_meta:                $font_page_text;
-$font_size_page_meta:           $font_size_default;
+$font_size_page_meta:           $font_size_default - 1;
 $font_line_height_page_meta:    $font_size_default + 4;
 
 // News Hub
