Update formatting image styling

--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -14,7 +14,7 @@
                     {% if post.image != nil %}
                         <div class="image">
                             <img src="{{ post.image }}" class="label" width="100%" height="auto"/>
-                            <p class="attribution">{{ post.image_attribution }}</p>
+                            <p class="attribution">image by {{ post.image_attribution }}&nbsp;</p>
                         </div>
                     {% endif %}
                     <p class="date">
