--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -867,22 +867,23 @@ section.post_column_main {
     }
     
     div.image {
-        background: $color_bg;
+        background: $color_image_bg;
         padding: 5px 5px 5px 5px;
         margin: 0 0px 20px 0;
         p.attribution {
-            padding: 2px 0px 3px 0px;
-            margin: 2px 0 0 0;
             font-size: $font_size_page_meta;
             font-style: italic;
-            line-height: $font_line_height_page_meta;
-            color: $color_text;
+            line-height: $font_line_height_page_meta - 8;
+            color: $color_image_attribution;
+            text-align: right;
+            padding: 2px 0px 3px 0px;
+            margin: 2px 0 0 0;
         }
     }
     
     div.video {
         width: $video_width_75;
-        background: $color_bg;
+        background: $color_image_bg;
         padding: 5px 5px 5px 5px;
         margin: 0 0px 20px 0;
         iframe {
@@ -898,12 +899,13 @@ section.post_column_main {
             height: auto;
         }
         p.attribution {
-            padding: 2px 0px 3px 0px;
-            margin: 2px 0 0 0;
             font-size: $font_size_page_meta;
             font-style: italic;
-            line-height: $font_line_height_page_meta;
-            color: $color_text;
+            line-height: $font_line_height_page_meta - 8;
+            color: $color_image_attribution;
+            text-align: right;
+            padding: 2px 0px 3px 0px;
+            margin: 2px 0 0 0;
         }
         @media screen {
             p.video_link {
