--- a/_includes/announcements.html
+++ b/_includes/announcements.html
@@ -21,7 +21,12 @@
                         {% endif %}
                     </p>
                 </div>
-                <p>{{ post.content | remove: '<p>' | remove: '</p>' | strip | remove: '"' }}</p>
+                <p>
+                    {{ post.content | remove: '<p>' | remove: '</p>' | strip | remove: '"' }}
+                    {% if post.link != nil %}
+                        <a href="/post/{{ page.link }}.html">Read more...</a>
+                    {% endif%}
+                </p>
             </div>
             {% assign found = true %}
         {% endif %}
