--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -9,24 +9,31 @@
         {% capture postdateend %}{{ post.dateend | date: '%F' }}{% endcapture %}
         {% if currentdate >= postdatestart and currentdate <= postdateend %}
             <div class="info">
+                
                 <div class="info_heading">
                     <h2>{{ post.title }}</h2>
-                    {% if post.image != nil %}
-                        <div class="image">
-                            <img src="{{ post.image }}" class="label" width="100%" height="auto"/>
-                            <p class="attribution">image by {{ post.image_attribution }}&nbsp;</p>
-                        </div>
-                    {% endif %}
-                    <p class="date">
-                        {% if post.eventdatestart != post.eventdateend %}
-                            {{ post.eventdatestart | date: '%a %d %b %Y' }} - {{ post.eventdateend | date: '%a %d %b %Y' }}
-                        {% else %}
-                            {{ post.eventdatestart | date: '%a %d %b %Y' }}
-                        {% endif %}
-                    </p>
                 </div>
+                <p class="date">
+                    {% if post.eventdatestart != post.eventdateend %}
+                        {{ post.eventdatestart | date: '%a %d %b %Y' }} - {{ post.eventdateend | date: '%a %d %b %Y' }}
+                    {% else %}
+                        {{ post.eventdatestart | date: '%a %d %b %Y' }}
+                    {% endif %}
+                </p>
+                {% if post.image != nil %}
+                    {% if post.style == "horizontal" %}
+                    <div class="image_small">
+                        <img src="{{ post.image }}" class="label" width="100%" height="auto"/>
+                    </div>
+                    {% else %}
+                    <div class="image">
+                        <img src="{{ post.image }}" class="label" width="100%" height="auto"/>
+                        <p class="attribution">image by {{ post.image_attribution }}&nbsp;</p>
+                    </div>
+                    {% endif %}
+                {% endif %}
                 <p>
-                    {{ post.content | remove: '<p>' | remove: '</p>' | strip | remove: '"' }}
+                    {{ post.excerpt | remove: '<p>' | remove: '</p>' | strip | remove: '"' }}
                     {% if post.link != nil %}
                         <a href="/post/{{ page.link }}.html">Read more...</a>
                     {% endif%}
