--- a/_includes/feature.html
+++ b/_includes/feature.html
@@ -35,7 +35,7 @@
                 <p>
                     {{ post.excerpt | remove: '<p>' | remove: '</p>' | strip | remove: '"' }}
                     {% if post.link != nil %}
-                        <a href="/post/{{ page.link }}.html">Read more...</a>
+                        <a href="/feature/{{ post.link }}.html">Read more...</a>
                     {% endif%}
                 </p>
             </div>
