--- a/_includes/head.html
+++ b/_includes/head.html
@@ -91,6 +91,7 @@
         }
     </script>
     
+    {% if site.development != true %}
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -100,6 +101,7 @@
         ga('create', 'UA-79666925-1', 'auto');
         ga('send', 'pageview');
     </script>
+    {% endif %}
     
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
