Fix javascript displaying quotes

--- a/_includes/quotes.html
+++ b/_includes/quotes.html
@@ -21,8 +21,8 @@
                         document.write("<div class='quote'>");
                         document.write("<p><i class='fa fa-quote-left fa-lg' aria-hidden='true'></i>&nbsp;&nbsp;" + quote_text[randomIndex] + "</p>");
                         document.write("<table>");
-                        document.write("<tr><td><p>&mdash;&nbsp;&nbsp;</p></td><td>" + "<p class='qauthor'>" + quote_from[randomIndex] + "</p><td/></tr>");
-                        document.write("<tr><td></td><td><p class='context'" + quote_context[randomIndex] + "</p></td></tr></table>");
+                        document.write("<tr><td><p>&mdash;&nbsp;&nbsp;</p></td><td><p class='qauthor'>" + quote_from[randomIndex] + "</p><td/></tr>");
+                        document.write("<tr><td></td><td><p class='context'>" + quote_context[randomIndex] + "</p></td></tr></table>");
                         document.write("</table>");
                         document.write("</div>");
                         
