Do not show announcement component label

--- a/_includes/announcements.html
+++ b/_includes/announcements.html
@@ -1,5 +1,7 @@
 <div id="announcements_block">
+    {% comment %}
     <h1>Announcements</h1>
+    {% endcomment %}
     <div class="announcements">
     {% assign found = false %}
     {% capture currentdate %}{{ 'now' | date: '%F' }}{% endcapture %}
