Add weather image and rearrange sidebars

--- a/_includes/hub_right_sidebar.html
+++ b/_includes/hub_right_sidebar.html
@@ -1,3 +1,6 @@
 <section class="column_right_sidebar">
+    {% include datetime.html %}
+    {% include weather_satellite.html %}
+    {% include quotes.html %}
     {% include feature.html %}
 </section>
