Import weather sass file

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,8 @@
 @import "font";
 @import "mixin";
 
+@import "weather";
+
 // Default
 $video_width_default:       640px;
 $video_height_default:      360px;
